<resources>
    <string name="app_name">Pip</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_twitpage">twitpage</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_profile">User</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="_01">0</string>
    <string name="_02">0</string>
    <string name="todo4">TODO</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="create_account">Create account</string>
    <string name="login">LogIn</string>
    <string name="save">Save</string>
    <string name="website">Website</string>
    <string name="birth_date">Birth date</string>
    <string name="location">Location</string>
    <string name="bio">Bio</string>
    <string name="username">UserName</string>
    <!--    <string name="default_web_client_id"> </string>-->
</resources>